# diffusion2D

./: README.md  setup.cfg  setup.py
src/: __init__.py  diffusion2d.py  output.py  test.py
