[metadata]
name = poryaesygmaildiffusion2D
version = 0.0.1
author = Pouria
author_email = poryaesmaeeli@yahoo.com
description = A 2D diffusion equation solver
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/poryaesygmail/diffusion2D
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.6
install_requires =
    numpy
    matplotlib

[options.packages.find]
where = src
